--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
 	"dependencies": {
 		"bcrypt": "^3.0.7",
 		"body-parser": "^1.19.0",
+		"celebrate": "^11.0.1",
 		"cors": "^2.8.5",
 		"crypto": "^1.0.1",
 		"express": "^4.17.1",
-		"express-validation": "^1.0.3",
 		"http-status-codes": "^1.4.0",
-		"joi": "^14.3.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.8.11",
 		"nodemon": "^2.0.2"
