--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"express": "^4.17.1",
 		"http-status-codes": "^1.4.0",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.24.0",
 		"mongoose": "^5.8.11",
 		"nodemon": "^2.0.2"
 	}
