--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.24.0",
 		"mongoose": "^5.8.11",
-		"nodemon": "^2.0.2"
+		"multer": "^1.4.2",
+		"nodemon": "^2.0.2",
+		"sharp": "^0.24.1",
+		"uuid": "^3.4.0"
 	}
 }
